--- a/MDK-ARM/ABURobocon2020_V0.1/ABURobocon2020_V0.build_log.htm
+++ b/MDK-ARM/ABURobocon2020_V0.1/ABURobocon2020_V0.build_log.htm
@@ -21,40 +21,13 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.6.0
 Dialog DLL:      TCM.DLL V1.36.2.0
  
 <h2>Project:</h2>
-C:\Users\JameWasin\Desktop\ABURobocon2020_V0.1\MDK-ARM\ABURobocon2020_V0.1.uvprojx
+C:\Users\JameWasin\Documents\ABU2020\MDK-ARM\ABURobocon2020_V0.1.uvprojx
 Project File Date:  12/06/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\keil\ARM\ARMCC\Bin'
 Build target 'ABURobocon2020_V0.1'
-compiling main.c...
-../Inc/STM_UART.h(55): warning:  #1-D: last line of file ends without a newline
-  unsigned int Serial_readBytes(int uartCH, volatile unsigned char *Byte , int timeOut);
-../Src/main.c(152): warning:  #188-D: enumerated type mixed with another type
-  	HAL_GPIO_WritePin(M1_A_GPIO_Port, M1_A_Pin, 1);
-../Src/main.c(153): warning:  #188-D: enumerated type mixed with another type
-  	HAL_GPIO_WritePin(M1_B_GPIO_Port, M1_B_Pin, 0);
-../Src/main.c(156): warning:  #188-D: enumerated type mixed with another type
-  	HAL_GPIO_WritePin(M1_A_GPIO_Port, M1_A_Pin, 0);
-../Src/main.c(157): warning:  #188-D: enumerated type mixed with another type
-  	HAL_GPIO_WritePin(M1_B_GPIO_Port, M1_B_Pin, 1);
-../Src/main.c(160): warning:  #188-D: enumerated type mixed with another type
-  	HAL_GPIO_WritePin(M1_A_GPIO_Port, M1_A_Pin, 0);
-../Src/main.c(161): warning:  #188-D: enumerated type mixed with another type
-  	HAL_GPIO_WritePin(M1_B_GPIO_Port, M1_B_Pin, 0);
-../Src/main.c(1060): warning:  #188-D: enumerated type mixed with another type
-  		HAL_GPIO_WritePin(M1_A_GPIO_Port, M1_A_Pin, 1);
-../Src/main.c(1062): warning:  #188-D: enumerated type mixed with another type
-  		HAL_GPIO_WritePin(M1_A_GPIO_Port, M1_A_Pin, 0);
-../Src/main.c(1118): warning:  #188-D: enumerated type mixed with another type
-  			HAL_GPIO_WritePin(M2_A_GPIO_Port, M2_A_Pin, 1);
-../Src/main.c(1121): warning:  #188-D: enumerated type mixed with another type
-  			HAL_GPIO_WritePin(M2_A_GPIO_Port, M2_A_Pin, 0);
-../Src/main.c: 11 warnings, 0 errors
-linking...
-Program Size: Code=16924 RO-data=456 RW-data=140 ZI-data=6812  
-FromELF: creating hex file...
-"ABURobocon2020_V0.1\ABURobocon2020_V0.1" - 0 Error(s), 11 Warning(s).
+"ABURobocon2020_V0.1\ABURobocon2020_V0.1" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -77,7 +50,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.2.0
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
