--- a/MDK-ARM/ABURobocon2020_V0.1/ABURobocon2020_V0.build_log.htm
+++ b/MDK-ARM/ABURobocon2020_V0.1/ABURobocon2020_V0.build_log.htm
@@ -27,7 +27,30 @@ Project File Date:  12/06/2019
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\keil\ARM\ARMCC\Bin'
 Build target 'ABURobocon2020_V0.1'
-"ABURobocon2020_V0.1\ABURobocon2020_V0.1" - 0 Error(s), 0 Warning(s).
+compiling main.c...
+../Inc/STM_UART.h(55): warning:  #1-D: last line of file ends without a newline
+  unsigned int Serial_readBytes(int uartCH, volatile unsigned char *Byte , int timeOut);
+../Src/main.c(155): warning:  #188-D: enumerated type mixed with another type
+  	HAL_GPIO_WritePin(M1_A_GPIO_Port, M1_A_Pin, 1);
+../Src/main.c(156): warning:  #188-D: enumerated type mixed with another type
+  	HAL_GPIO_WritePin(M1_B_GPIO_Port, M1_B_Pin, 0);
+../Src/main.c(159): warning:  #188-D: enumerated type mixed with another type
+  	HAL_GPIO_WritePin(M1_A_GPIO_Port, M1_A_Pin, 0);
+../Src/main.c(160): warning:  #188-D: enumerated type mixed with another type
+  	HAL_GPIO_WritePin(M1_B_GPIO_Port, M1_B_Pin, 1);
+../Src/main.c(163): warning:  #188-D: enumerated type mixed with another type
+  	HAL_GPIO_WritePin(M1_A_GPIO_Port, M1_A_Pin, 0);
+../Src/main.c(164): warning:  #188-D: enumerated type mixed with another type
+  	HAL_GPIO_WritePin(M1_B_GPIO_Port, M1_B_Pin, 0);
+../Src/main.c(1063): warning:  #188-D: enumerated type mixed with another type
+  		HAL_GPIO_WritePin(M1_A_GPIO_Port, M1_A_Pin, 1);
+../Src/main.c(1065): warning:  #188-D: enumerated type mixed with another type
+  		HAL_GPIO_WritePin(M1_A_GPIO_Port, M1_A_Pin, 0);
+../Src/main.c: 9 warnings, 0 errors
+linking...
+Program Size: Code=16884 RO-data=456 RW-data=140 ZI-data=6844  
+FromELF: creating hex file...
+"ABURobocon2020_V0.1\ABURobocon2020_V0.1" - 0 Error(s), 9 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -50,7 +73,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.2.0
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
